--- a/FAV/templates/base.html
+++ b/FAV/templates/base.html
@@ -8,7 +8,7 @@
       Fazenda À Venda
       {% endblock %}
     </title>
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"  rel="stylesheet" /> -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"  rel="stylesheet" />
   </head>
   <body>
     <nav style="background-color:#72B944;" class="navbar navbar-expand-lg navbar-light bg-light">
