✨create: home.css

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 <body>
     <div id="home">
         <div id="img-fundo">
-        <img src="https://images.pexels.com/photos/16063621/pexels-photo-16063621/free-photo-of-verao-arvores-campo-interior.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="fotoFazenda">
+            <img src="/IMPACTA-SSPI/static/fotoFazenda.png" alt="fotoFazenda">
         </div>
         <div id="txt">
             <p>
