--- a/static/home.css
+++ b/static/home.css
@@ -10,8 +10,11 @@
 }
 
 #txt {
-    position: absolute;
+    display: block;
+    position: relative;
+    justify-content: center;
+    align-items: center;
     top: 0;
     left: 100px;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
 }
