--- a/static/login.css
+++ b/static/login.css
@@ -1,215 +1,155 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
+@import url(https://db.onlinewebfonts.com/c/f8ecf8ba4bdf80a4ba4277a3b2f702b6?family=PeydaWeb+SemBd); 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+a{
+    text-decoration: none;
 
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Quicksand", sans-serif;
+}
+body{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "PeydaWeb SemBd"; 
+    background-color: #f0f0f0;
+} 
+
+.container{
+    transition: all 0.5s ease;
+    position: relative;
+    width: 460px;
+    height: 640px;
+    border-radius: 12px;
+    padding: 20px 30px 120px;
+    background-color: #303f9f;
+    box-shadow: 0 5px 10px rgba(0, 0, 0,0.1);
+    overflow: hidden;
+}
+.login-section{
+    position: absolute;
+    left: 50%;
+    top: 90%;
+    transform: translateX(-50%);
+    width: calc(100% + 180px);
+    padding: 20px 140px;
+    background-color: #fff;
+    border-radius: 290px;
+    height: 100%;
+    transition: all 0.6s ease;
+}
+.login-section header,
+.singup-section header{
+    font-size: 30px;
+    text-align: center;
+    color: #fff;
+    font-weight: 600;
+    cursor: pointer;
+}.login-section header{
+    color: #333;
+
+opacity: 0.6;
 }
 
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  width: 100%;
-  background: #222431;
-  padding: 40px 20px;
+.social-buttons{
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
 }
 
-/* Snow */
-
-#particles-js {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
+.social-buttons button{
+    cursor: pointer;
+    width: 100%;
+    padding: 10px;
+    background-color: #fff;
+    border: none;
+    border-radius:10px;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    gap: 6px;
 }
 
-main {
-  display: grid;
-  grid-template-columns: 45% 55%;
-  place-items: center;
-  background: #f6f6f6;
-  width: min(700px, 95%);
-  border-radius: 20px;
+
+.login-section .social-buttons button{
+    border: 1px solid #000;
+    cursor: pointer;
+
 }
 
-/* Left Side */
-
-.left-side {
-  height: 100%;
-  width: 100%;
-  background-image: url(https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/64ef8d9a-9202-4543-b838-82f4c7c91ccf);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  pointer-events: none;
-  border-radius: 20px 0 0 20px;
+.login-section .social-buttons button i,
+.singup-section .social-buttons button i{
+    font-size: 25px;
+    cursor: pointer;
 }
 
-/* Right Side */
-
-.right-side {
-  padding: 60px;
+.seperator{
+    margin-top: 20px;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+.seperator .line{
+    width: 100%;
+    height: 1px;
+    background-color: #ccc;
 }
 
-/* Button Group */
+.seperator p {
+    color: #fff;
+}
+.login-section .seperator p{
+    color: #000;
+}
+.container form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 30px;
 
-.btn-group {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  gap: 5px;
-  margin-bottom: 32px;
 }
 
-.btn-group .btn {
-  display: flex;
-  align-items: center;
-  column-gap: 4px;
-  width: max-content;
-  font-size: 0.8rem;
-  font-weight: 500;
-  padding: 8px 6px;
-  border: 2px solid #6b7280;
-  border-radius: 5px;
-  background-color: #f6f6f6;
-  transform: scale(1);
-  cursor: pointer;
-  transition: transform 0.1s ease, background-color 0.5s, color 0.5s;
+form input{
+    outline: none;
+    border: none;
+    padding: 10px 15px;
+    font-size: 16px;
+    color: #333;
+    font-weight: 400px;
+    border-radius: 8px;
+    background: #fff;
+    
 }
 
-.btn-group .btn:focus {
-  transform: scale(0.97);
+.login-section input{
+    border: 1px solid #aaa;
+}
+form a{
+    color:#333;
 }
 
-.btn-group .btn:hover {
-  background-color: #000;
-  color: #eee;
+
+.singup-section form a{
+    color: #fff;
+}
+form .btn{
+    margin-top: 15px;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 8px;
+    font-size: 18px;
+    cursor: pointer;
+}
+.login-section .btn{
+    background-color: #303f9f;
+    color: #fff;
+    border: none;
+
 }
 
-.btn img {
-  width: 16px;
-  height: 16px;
-}
 
-.logo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #f6f6f6;
-  border-radius: 50%;
-  padding: 2px;
-}
 
-/* OR */
-
-.or {
-  position: relative;
-  text-align: center;
-  margin-bottom: 24px;
-  font-size: 1rem;
-  font-weight: 600;
-}
-
-.or::before,
-.or::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  width: 40%;
-  height: 1px;
-  background: #000;
-}
-
-.or::before {
-  left: 0;
-}
-
-.or::after {
-  right: 0;
-}
-
-/* Inputs and Labels */
-
-input {
-  width: 100%;
-  padding: 12px 20px;
-  border: 2px solid #ccc;
-  outline: 0;
-  border-radius: 5px;
-  background-color: transparent;
-  margin: 4px 0 18px;
-  font-size: 0.85rem;
-  font-weight: 600;
-  transition: all 0.5s;
-}
-
-input:focus {
-  border: 2px solid #000;
-}
-
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: #000;
-  transition: background-color 5000s ease-in-out 0s;
-}
-
-label {
-  font-weight: 600;
-  font-size: 0.9rem;
-}
-
-/* Login Button */
-
-.login-btn {
-  width: 100%;
-  font-size: 0.9rem;
-  font-weight: 600;
-  padding: 8px 24px;
-  margin: 12px 0 24px;
-  border: 2px solid #6b7280;
-  border-radius: 5px;
-  background-color: #f6f6f6;
-  cursor: pointer;
-  transition: all 0.5s;
-}
-
-.login-btn:hover {
-  background-color: #000;
-  color: #eee;
-}
-
-/* Links */
-
-.links {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-a:link,
-a:visited,
-a:hover,
-a:active {
-  text-decoration: none;
-}
-
-a {
-  color: #000;
-  font-size: 0.88rem;
-  font-weight: 600;
-  letter-spacing: -1px;
-  transition: all 0.4s ease;
-}
-
-a:hover {
-  color: rgb(13, 133, 185);
-}
