--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,10 @@
 {% if messages %}
 <ul class="messages">
     {% for message in messages %}
-    <li  {% if message.tags %} class=" {{ message.tags }} " {% endif %}> {{ message }} </li>
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
+        {{ message }}
+    </li>
     {% endfor %}
 </ul>
 {% endif %}
