--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,12 @@
 {% extends "base.html" %} {% block title %} Fazenda à Venda {% endblock %}
 {% block content %}
 {% load static %}
+   
+{% if message %}
+<script>
+    alert('{{ message }}');
+</script>
+{% endif %}
 <link href="{% static 'home.css' %}" rel="stylesheet" type='text/css'>
 <body>
     <div id="home">
