--- a/templates/login.html
+++ b/templates/login.html
@@ -1,13 +1,9 @@
 {% load static %}
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
-        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}
-        {{ message }}
-    </li>
-    {% endfor %}
-</ul>
+   
+{% if message %}
+<script>
+    alert('{{ message }}');
+</script>
 {% endif %}
 <head>
   <link href='{% static "login.css" %}' rel='stylesheet'>
@@ -41,7 +37,7 @@
             <input type="text" placeholder="Nome Completo" name = "name" required>
             <input type="email" placeholder="Seu Melhor e-mail!" name="email" required>
             <input type="password" placeholder="Senha" name="pass" required>
-            <a href="#">Esqueceu a senha?</a>
+            <a href="http://127.0.0.1:8000/forget">Esqueceu a senha?</a>
 
             <button type="submit" class="btn">Registrar</button>
 
@@ -74,7 +70,7 @@
             {% csrf_token %}
             <input type="email" placeholder="e-mail cadastrado" name="lemail" required>
             <input type="password" placeholder="Senha!" name="lpass" required>
-            <a href="#">Esqueceu a senha?</a>
+            <a href="http://127.0.0.1:8000/forget">Esqueceu a senha?</a>
             <button type="submit" class="btn">Entrar</button>
         </form>
 
