--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
         <header id="singup" onclick="closelogin()">Registro</header>
 
         <div class="social-buttons">
-            <button><i class='bx bxl-google-plus'></i>
+            <button onclick=google_auth><i class='bx bxl-google-plus'></i>
                 Cadastrar com Google
             </button>
         </div>
@@ -86,3 +86,4 @@
 
 
 <script src="{% static 'login.js' %}"></script>
+<script src="{% static 'g_auth.js' %}"></script>
