--- a/static/home.css
+++ b/static/home.css
@@ -1,5 +1,26 @@
+/*Bem-vindo!*/
+h1{
+    color: aliceblue;
+    width: 1000px;
+    height: 100px;
+    font-size: 60px;
+    font-family: monospace;
+    
+}
+
+/*Localize sua Fazenda!*/
+h2{
+    color: aliceblue;
+    font-size: 30px;
+}
+
+body{
+    margin: 0;
+    padding: 0;
+}
+
 #img-fundo{
-    float: left;
+    float: center;
     position: relative;
     max-width: 1000%;
     height: auto; 
@@ -7,14 +28,30 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+
 }
 
 #txt {
     display: block;
-    position: relative;
+    position: absolute;
     justify-content: center;
     align-items: center;
-    top: 0;
-    left: 100px;
+    height: auto;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     color: rgb(0, 0, 0);
+}
+
+.Search{
+    position: relative;
+    justify-content: center;
+    top: 50%;
+    width: 80px;
+    height: 80px;
+    
+}
+
+#txt-pesquisa{
+    height: 25px;
 }
