--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %} {% block title %} Fazenda à Venda {% endblock %}
+{% extends "base.html" %} {% block title %} Fazenda Ã  Venda {% endblock %}
 {% block content %}
 {% load static %}
    
@@ -8,28 +8,33 @@
 </script>
 {% endif %}
 <link href="{% static 'home.css' %}" rel="stylesheet" type='text/css'>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
 <body>
-    <div id="home">
-        <div id="img-fundo">
-            <img width="1280" height="720" src="{% static 'fotoFazenda.png' %}" alt="fotoFazenda">
-        </div>
-        <div id="txt">
-            <p>
-                <h1>
-                    Bem vindo!
-                </h1>
-                <h2>
-                    Utilize a barra de pesquisa abaixo
-                </h2>
-                <input type="text" name="txt-pesquisa" id="txt-pesquisa">
-            </p>
-            <!-- <div class="relative w-full h-96">
+    <header>
+        <div id="home">
+            <div id="img-fundo">
+                <img id="fotoFazenda"  src="{% static 'fotoFazenda.png' %}" alt="fotoFazenda">
+            </div>
+                <div id="txt">
+                    <p>
+                        <h1>Bem-vindo!</h1>
+                    </p>
+                    <p class="Search">
+                        <h2>Encontre sua nova vida!</h2>
+                        <i class="bi bi-search"></i>
+                        <input type="text" name="txt-pesquisa" id="txt-pesquisa"  placeholder="Localizar Fazendas">
+                    </p>
+                </div>
+            </div>
+    </header>
+
+<!-- <div class="relative w-full h-96">
                 <iframe class="absolute top-0 left-0 w-full h-full"
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12080.73732861526!2d-74.0059418!3d40.7127847!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zM40zMDA2JzEwLjAiTiA3NMKwMjUnMzcuNyJX!5e0!3m2!1sen!2sus!4v1648482801994!5m2!1sen!2sus"
                     frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
                 </iframe>
             </div> -->
-        </div>
-    </div>
+
 </body>
 {% endblock %}
