MEU DESU MIM AJUDE

--- a/static/home.css
+++ b/static/home.css
@@ -31,14 +31,15 @@ body{
 
 }
 
+
 #txt {
     display: block;
     position: absolute;
     justify-content: center;
     align-items: center;
     height: auto;
-    top: 20%;
-    left: 50%;
+    top: 30%;
+    left: 35%;
     transform: translate(-50%, -50%);
     color: rgb(0, 0, 0);
 }
@@ -57,5 +58,30 @@ body{
 }
 
 #sid{
+    visibility: hidden;
     display: none;
+}
+
+.message {
+	border-radius: 10px;
+	box-shadow: 3px 3px 4px 0px rgba(50, 50, 50, 0.75);
+	color: white;
+	margin-bottom: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	padding-bottom: 5px;
+	padding-top: 5px;
+	text-align: center;
+	width: 80%;
+}
+
+/*
+ * Give the various message types the correct colors
+ */
+.message.success {
+	background-color: green;
+}
+
+.message.error {
+	background-color: red;
 }
