--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,8 @@
               <li><a href="#">home</a></li>
               <li><a href="#">sobre</a></li>
               <li><a href="#">serviço</a></li>
-              <li><a href="#" id="logout">logout</a></li>
+              <li><a href="/login" id="login">login</a></li>
+              <li><a href="/logout" id="logout">logout</a></li>
             </ul>
     
             <!-- nav-toggler for mobile version only -->
@@ -36,7 +37,7 @@
           </nav>
         </div>
       </div>
-    <div class="container">{% block content %} {% endblock %}</div>
+    <div class="container">{% block content %}{% endblock %}</div>
     <footer style="background-color: #262626;">
         <p style="color: white;">© 2024 - Fazenda à Venda. Todos os direitos reservados.</p>
     </footer>
