--- a/static/login.css
+++ b/static/login.css
@@ -4,6 +4,31 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.message {
+	border-radius: 10px;
+	box-shadow: 3px 3px 4px 0px rgba(50, 50, 50, 0.75);
+	color: white;
+	margin-bottom: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	padding-bottom: 5px;
+	padding-top: 5px;
+	text-align: center;
+	width: 80%;
+}
+
+/*
+ * Give the various message types the correct colors
+ */
+.message.success {
+	background-color: green;
+}
+
+.message.error {
+	background-color: red;
+}
+
 a{
     text-decoration: none;
 
@@ -150,3 +175,4 @@ form .btn{
     border: none;
 
 }
+
