--- a/templates/home.html
+++ b/templates/home.html
@@ -2,13 +2,18 @@
 {% block content %}
 {% load static %}
 <p id="sid">{{ sid }}</p>
-{% if message %}
-<script>
-    alert('{{ message }}');
-</script>
-{% endif %}
+
 <link href="{% static 'home.css' %}" rel="stylesheet" type='text/css'>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+{% if messages %}
+<div class="messages">
+	{% for message in messages %}
+	<p class="message {{ message.tags }}">{{ message }}</p>
+	{% endfor %}
+</div>
+{% endif %}
+
 
 <body>
     <header>
@@ -37,4 +42,7 @@
             </div> -->
 
 </body>
+<script>
+    $('.message').hide().fadeIn(500).delay(3).fadeOut(500);  
+    </script>
 {% endblock %}
