--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,10 @@
-{% extends "base.html" %} {% block title %} Fazenda Ã  Venda {% endblock %}
+{% extends "base.html" %}
 {% block content %}
 {% load static %}
 <p id="sid">{{ sid }}</p>
 
 <link href="{% static 'home.css' %}" rel="stylesheet" type='text/css'>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
-{% if messages %}
-<div class="messages">
-	{% for message in messages %}
-	<p class="message {{ message.tags }}">{{ message }}</p>
-	{% endfor %}
-</div>
-{% endif %}
-
 
 <body>
     <header>
@@ -42,7 +33,4 @@
             </div> -->
 
 </body>
-<script>
-    $('.message').hide().fadeIn(500).delay(3).fadeOut(500);  
-    </script>
 {% endblock %}
