--- a/templates/login.html
+++ b/templates/login.html
@@ -1,21 +1,8 @@
+{% extends "base.html" %}
 {% load static %}
 
-<head>
-  <link href='{% static "login.css" %}' rel='stylesheet'>
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <!-- CUZAO <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
-  {% if messages %}
-  <div class="messages">
-      {% for message in messages %}
-      <p class="message {{ message.tags }}">{{ message }}</p>
-      {% endfor %}
-  </div>
-  {% endif %}
-
-
-
-</head>
+<link href='{% static "login.css" %}' rel='stylesheet'>
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 <div class="container">
 
@@ -91,6 +78,4 @@
 
 
 <script src="{% static 'login.js' %}"></script>
-<script>
-    $('.message').hide().fadeIn(500).delay(3).fadeOut(500);  
-    </script>
+{% endblock %}
