--- a/static/login.css
+++ b/static/login.css
@@ -5,37 +5,14 @@
     box-sizing: border-box;
 }
 
-.message {
-	border-radius: 10px;
-	box-shadow: 3px 3px 4px 0px rgba(50, 50, 50, 0.75);
-	color: white;
-	margin-bottom: 20px;
-	margin-left: auto;
-	margin-right: auto;
-	padding-bottom: 5px;
-	padding-top: 5px;
-	text-align: center;
-	width: 80%;
-}
-
-/*
- * Give the various message types the correct colors
- */
-.message.success {
-	background-color: green;
-}
-
-.message.error {
-	background-color: red;
-}
-
 a{
     text-decoration: none;
 
 }
 body{
+    z-index: 2;
     height: 100vh;
-    display: flex;
+    display:block;
     align-items: center;
     justify-content: center;
     font-family: "PeydaWeb SemBd"; 
@@ -53,6 +30,19 @@ body{
     box-shadow: 0 5px 10px rgba(0, 0, 0,0.1);
     overflow: hidden;
 }
+
+.rcontainer{
+    transition: all 0.5s ease;
+    position: relative;
+    width: 460px;
+    height: 640px;
+    border-radius: 12px;
+    padding: 20px 30px 120px;
+    background-color: #87dea8;
+    box-shadow: 0 5px 10px rgba(0, 0, 0,0.1);
+    overflow: hidden;
+}
+
 .login-section{
     position: absolute;
     left: 50%;
