--- a/templates/forget.html
+++ b/templates/forget.html
@@ -1,44 +1,38 @@
+{% extends "base.html" %}
+{% block content %}
 {% load static %}
-{%if msg%}
-    <script>
-        window.alert('{{msg}}');
-    </script>
-{% endif%}
-<head>
-  <link href='{% static "login.css" %}' rel='stylesheet'>
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
-</head>
 
-<div class="container">
 
-    <!-- SEÇÃO DE LOGIN -->
+<link href='{% static "login.css" %}' rel='stylesheet'>
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+ 
 
-    <div class="login-section" id="login-section">
-        <header id="login" onclick="openlogin()">Resetar Senha!</header>
 
-        <div class="social-buttons">
-            <button><i class='bx bxl-google-plus'></i>
-                Entrar com Google
-            </button>
-        </div>
+<div class="rcontainer">
+
+    <!-- SEÇÃO DE REGISTRO  -->
+
+    <div class="singup-section" id="singup-section">
+        <header id="singup" onclick="closelogin()">Reset de senha!</header>
+
+        <style>
+            
+        </style>
         <div class="seperator">
             <div class="line"></div>
             <p>Ou</p>
             <div class="line"></div>
         </div>
-
-        
-        
-        
         <form action="/forget/" method="post">
             {% csrf_token %}
-            <input type="email" placeholder="e-mail cadastrado" name="remail" required>
-            <a href="http://127.0.0.1:8000/login">Acesse aqui!</a>
-            <button type="submit" class="btn">Entrar</button>
-        </form>
+            <input type="email" placeholder="Email de cadastro" name="remail" required>
+            <a href="/login">Entre por aqui!</a>
 
+            <button type="submit" class="btn">Enviar e-mail</button>
+
+
+
+        </form>
     </div>
 
 
@@ -51,3 +45,4 @@
 
 
 <script src="{% static 'login.js' %}"></script>
+{% endblock content %}
