--- a/templates/home.html
+++ b/templates/home.html
@@ -1,13 +1,11 @@
 {% extends "base.html" %}
-{% block content %}
-{% load static %}
-<p id="sid">{{ sid }}</p>
 
+{% load static %}
+
+{% block content %}
 <link href="{% static 'home.css' %}" rel="stylesheet" type='text/css'>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-<body>
-    <header>
         <div id="home">
             <div id="img-fundo">
                 <img id="fotoFazenda"  src="{% static 'fotoFazenda.png' %}" alt="fotoFazenda">
@@ -23,8 +21,6 @@
                     </p>
                 </div>
             </div>
-    </header>
-
 <!-- <div class="relative w-full h-96">
                 <iframe class="absolute top-0 left-0 w-full h-full"
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12080.73732861526!2d-74.0059418!3d40.7127847!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zM40zMDA2JzEwLjAiTiA3NMKwMjUnMzcuNyJX!5e0!3m2!1sen!2sus!4v1648482801994!5m2!1sen!2sus"
@@ -32,5 +28,4 @@
                 </iframe>
             </div> -->
 
-</body>
-{% endblock %}
+{% endblock content %}
